# DHL-LinAlg

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  winBuild.bat
.github/workflows/: ci-pip.yml  cmake-single-platform.yml  deploy.yml
ASCsoft/: __init__.py
benchmark/: README.md  benchmark.py  benchmark_visualisation.ipynb
dhllinalg/: __init__.py
docs/: api_reference.rst  conf.py  contribute.rst  examples.rst  index.rst  install.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  install.rst.txt
docs/examples/: matrix_example.ipynb  vector_example.ipynb
examples/: MatMatMult-simple.ipynb  results-small.csv  results.csv  timing.py  timing_visualisation.ipynb
img/: dhl-linalg-banner.psd  favicon.psd
img/data/: results.csv  results_numpy.csv
img/r/: speed-single-v-parallel.R
py_tests/: test_matrix.py  test_vector.py  timing.py
src/: bind_bla.cpp  expression.h  innerproduct.h  lapack_interface.h  matrix.h  shared_mat_vec.h  vector.h
tests/: test_lapack.cc  test_matrix.cc  test_vector.cc
