[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "ASCsoft"
version = "0.0.1"
description = "Basic linear algebra"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="DHL" },
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2", 
    "numpy>=1.26.1",
]
